--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+ <html class="no-js">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,13 +13,10 @@
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+
 
         <div id="home" class="carousel slide carousel-fade" data-ride="carousel">
 
-          <!-- Wrapper for slides -->
           <div class="carousel-inner">
                 <div class="item active">
                     <div class="item-1"></div>
@@ -87,7 +81,7 @@
                 </div>
             </div>
 
-        </div> <!-- Carousel -->
+        </div>
 
 
         <nav id="navigation">
@@ -106,6 +100,7 @@
                             <li><a href="#home" class="current">Home</a></li>
                             <li><a href="#about">About Me</a></li>
                             <li><a href="#gallery">MY RECOMMEND</a></li>
+                            <li><a href="#contact">CONTACT ME</a></li>
                         </ul>
 
                     </div><!--/.nav-collapse -->
@@ -133,7 +128,7 @@
                     <div class="col-md-4 col-sm-6 col-xs-12">
                         <div class="profile-content">
                             <h4>林宽</h4>
-                            <span>前端工程师</span>
+                            <span>前端实习工程师</span>
                             <p>一个正在前端学习路上的码农，热爱ACG文化，现今就读于厦门理工学院，喜欢的动漫制作公司为PA.works，也是一名网上俗称的暴白（暴雪死忠粉）。</p>
                             <ul class="social-icons">
                                 <li><a href="#" class="fa fa-twitter"></a></li>
@@ -252,14 +247,59 @@
                     </div>
                 </div>
             </div>
+
         </section>
-
-
-
+        <section id="contact" class="page-section">
+            <div class="container">
+                <div class="row page-heading">
+                    <div class="col-md-8 col-sm-8">
+                        <h3 class="page-title">Contact Me</h3>
+                        <p class="page-subtitle">留下您的建议与意见</p>
+                    </div>
+                    <div class="col-md-4 col-sm-4 hidden-xs text-right">
+                        <p class="page-icon"><i class="fa fa-envelope"></i></p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-9 col-sm-12">
+                        <div class="row">
+                            <form action="#" method="post" class="contact-form">
+                                <fieldset class="col-md-4 col-sm-6 col-xs-12">
+                                    <input type="text" id="name" placeholder="Name...">
+                                </fieldset>
+                                <fieldset class="col-md-4 col-sm-6 col-xs-12">
+                                    <input type="email" id="email" placeholder="Email...">
+                                </fieldset>
+                                <fieldset class="col-md-4 col-sm-12 col-xs-12">
+                                    <input type="text" id="subject" placeholder="Subject...">
+                                </fieldset>
+                                <fieldset class="col-md-12 col-sm-12 col-xs-12">
+                                    <textarea name="message" id="message" cols="30" rows="6" placeholder="Message..."></textarea>
+                                </fieldset>
+                                <fieldset class="col-md-12 col-sm-12 col-xs-12">
+                                    <input type="submit" class="button default" value="Send Message">
+                                </fieldset>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-12">
+                        <div class="contact-info">
+                            <h4>Contact Information</h4>
+                            <p>将你在这个网页中的想法告诉我或者将你对于ACG文化的知识留下。</p>
+                            <ul class="social-icons">
+                                <li><a href="#" class="fa fa-twitter"></a></li>
+                                <li><a href="#" class="fa fa-linkedin"></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <footer class="site-footer">
             <div class="container">
                 <div class="text-center">
                     <a href="#" class="go-top"><i class="fa fa-angle-up"></i></a>
+                    <p class="copyright-text"></p>
                 </div>
             </div>
         </footer>
