--- a/index.html
+++ b/index.html
@@ -272,6 +272,22 @@
 	<script>
 	 new WOW().init();
 	</script>
+	<!--<script>-->
+		<!--document.ready(function () {-->
+			<!--var a = $('#InputName').html();-->
+			<!--var b = $('InputEmail').html();-->
+            <!--var emal=/^[A-Za-zd]+([-_.][A-Za-zd]+)*@([A-Za-zd]+[-.])+[A-Za-zd]{2,5}$/;-->
+            <!--var paduan=emal.test(b);-->
+            <!--if (a==''){-->
+			    <!--alert(用戶名不能为空!);-->
+			    <!--return false;-->
+			<!--} else if (paduan!=emal.test(b)){-->
+                <!--alert(邮箱错误!);-->
+                <!--return false;-->
+			<!--}-->
+
+        <!--})-->
+	<!--</script>-->
 </body>
 
 </html>
